longhorn/manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-system
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: longhorn.czmbok3s0001.k8s.corp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
